@@ -10,17 +10,16 @@ import com.tetradunity.server.utils.AuthUtil;
 import jakarta.servlet.http.HttpServletRequest;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @RestController
+@RequestMapping("certificate")
 public class CertificateController {
     @Autowired
     private CertificateRepository certificateRepository;
@@ -28,7 +27,7 @@ public class CertificateController {
     private UserRepository userRepository;
 
     @GetMapping("get-certificates")
-    public ResponseEntity<Object> getCertificates(long student_id){
+    public ResponseEntity<Object> getCertificates(@RequestParam long student_id){
         UserEntity user = userRepository.findById(student_id).orElse(null);
 
         if(user == null || user.getRole() != Role.STUDENT){
@@ -40,11 +39,11 @@ public class CertificateController {
         response.put("certificates", certificateRepository.findAllCertificates(student_id)
                 .stream()
                 .map(Certificate::new)
-                .toList());
+                .collect(Collectors.toList()));
         return ResponseEntity.ok().body(response);
     }
 
-    @PostMapping("check-certificate")
+    @GetMapping("check-certificate")
     public ResponseEntity<Object> checkCertificate(@RequestParam String uid) {
         Map<String, Object> response = new HashMap<>();
         response.put("ok", true);
